# FreeRDP-Extension-XPUnlimited

./: .gitignore  CMakeLists.txt  README  bootstrap
cmake/: FindFreeRDP.cmake
src/: CMakeLists.txt  xpu.c  xpu.h  xpu_main.c
